# APECxx

./: .gitignore  CMakeLists.txt  MakeFile  README.md  main.cpp  wav_read.cpp  wav_read.hpp  wav_read_test.cpp  wav_rw.cpp  wav_rw.hpp  wav_rw_test.cpp
include/: AudioBuffer.hpp  SampleConversion.hpp  audio_buffer.hpp  project.h  wav_reader.hpp  wav_writer.hpp
include/DSP/: BiQuadFilter.hpp  Equalizer.hpp  FilterChain.hpp  FilterDesign.hpp
include/Effects/: AudioEffect.hpp  BasicEffects.hpp  Equalizer.hpp  FadeEffect.hpp  FilterEffects.hpp  GainEffect.hpp  MixEffect.hpp
include/WavIO/: WavCommon.hpp  WavReader.hpp  WavWriter.hpp
include/effects/: audio_effect.hpp  gain_effect.hpp
include/wav_io/: wav_writer.hpp
src/: AudioBuffer.cpp  audio_buffer.cpp  main.cpp  wav_reader.cpp  wav_writer.cpp
src/DSP/: BiQuadFilter.cpp  FilterDesign.cpp
src/Effects/: FadeEffect.cpp  GainEffect.cpp  MixEffect.cpp
src/WavIO/: WavReader.cpp  WavWriter.cpp
src/effects/: gain_effect.cpp
src/wav_io/: wav_reader.cpp  wav_writer.cpp
tests/: AudioBufferTests.cpp  CMakeLists.txt  ExampleTests.cpp  test_audio_buffer.cpp  test_basic_effects.cpp  test_effects.cpp  test_filters.cpp  test_sample_conversions.cpp  test_wav_io.cpp
wav-files/: Unconfirmed 404793.crdownload  sample-1.txt
